<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/txtFlyOut"
        android:textColor="#5f5f94"
        android:textSize="20dp"
        android:typeface="monospace"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/txtIPAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtTitle"
        android:ems="10"
        android:hint="@string/hintIP"
        android:text="192.168.1.1" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtIPAddress"
        android:layout_toRightOf="@+id/txtIPAddress"
        android:text="@string/txtConnect" />

    <ImageView
        android:id="@+id/imgRobot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtIPAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/txtTitle"
        android:src="@drawable/icon_soultwine" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnConnect"
        android:background="#000"
        android:orientation="vertical"
        tools:context=".PsychLinkMain">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvOutput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:overScrollMode="always"
                    android:scrollbars="vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="80dp">

            <EditText
                android:id="@+id/etInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#000"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:minHeight="60dp"
                android:textColor="#FFF">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btnParse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:text="Send" />
        </LinearLayout>
    </LinearLayout>

    <com.romainclaret.android.soulkeeper.SoulView
        android:id="@+id/ps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/btnConnect"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp" />


</RelativeLayout>
